@@ -13,6 +13,8 @@ dohpaZ (12/?/03)
   that are captured.
 + Support display of a zone's safepoint from the zone packet on the map.
 + Added NetStream classes for handling network byte order data streams.
++ Cleaned up the textual dump of guild names
++ Added GuildShell to track the list of guild members.
 + Integrated patch #861374 "Fix-three options aren't saved".
 + Integrated patch #864328 "Nedaria's Landing Map".
 + Integrated patch #864329 "Map: JaggedPine touchups".
